--- a/oj-client/src/app/components/problemlist/problemlist.component.html
+++ b/oj-client/src/app/components/problemlist/problemlist.component.html
@@ -1,3 +1,6 @@
+<div class ="container">
+  <app-add-problem></app-add-problem>
+</div>
 <div class="container">
   <div class="list-group">
     <a class="list-group-item" *ngFor="let problem of problems" [routerLink]="['/problems', problem.id]">
